--- a/test/src/emos-build/banner - Footer Contact.html
+++ b/test/src/emos-build/banner - Footer Contact.html
@@ -15,5 +15,6 @@
         <li><a target="_blank" href="https://www.beko.com.tr/">Beko</a></li>
         <li><a target="_blank" href="http://www.grundig.com.tr/">Grundig</a></li>
         <li><a target="_blank" href="https://www.koctas.com.tr/">Koçtaş</a></li>
+        <li><a target="_blank" href="http://www.koc.com.tr/tr-tr/faaliyet-alanlari/sirketler">Diğer Holding Şirketleri</a></li>
     </ul>
 </div>
