--- a/test/src/emos-build/banner - Footer Contact.html
+++ b/test/src/emos-build/banner - Footer Contact.html
@@ -10,11 +10,10 @@
     </ul>
 </div>
 <div class="koc-holding-company ems-inline">
-    <b>Diğer Holding Şirketleri</b>
+    <a target="_blank" href="http://www.koc.com.tr/tr-tr/faaliyet-alanlari/sirketler">Diğer Holding Şirketleri</a>
     <ul class="ems-inline">
         <li><a target="_blank" href="https://www.beko.com.tr/">Beko</a></li>
         <li><a target="_blank" href="http://www.grundig.com.tr/">Grundig</a></li>
         <li><a target="_blank" href="https://www.koctas.com.tr/">Koçtaş</a></li>
-        <li><a target="_blank" href="http://www.koc.com.tr/tr-tr/faaliyet-alanlari/sirketler">Diğer Holding Şirketleri</a></li>
     </ul>
 </div>
