--- a/live/src/emos-build/ascSoruSor.html
+++ b/live/src/emos-build/ascSoruSor.html
@@ -34,7 +34,7 @@
                     <emos type="div" class="ems-form-label" id="plhMesajUlkeLabel" />
                     <emos type="div" class="ems-form-obj" id="plhMesajUlke" />
                 </div>
-                <div class="ems-field text ems-none">
+                <div class="ems-field text">
                     <emos type="div" class="ems-form-label" id="plhMesajSehirLabel" />
                     <emos type="div" class="ems-form-obj" id="plhMesajSehir" />
                 </div>
