--- a/live/src/emos-build/design - Expert Advice.html
+++ b/live/src/emos-build/design - Expert Advice.html
@@ -52,7 +52,7 @@
                 <div class="expert-name">$prmTitle2$</div>
             </div>
             </EMOSIF>
-            <div class="inner-row-2">$prmAnswerFull$<p></div>
+            <div class="inner-row-2">$prmAnswerFull$</div>
         </div>
     </div>
 </div>
