--- a/live/src/emos-build/template - Product (Loop).html
+++ b/live/src/emos-build/template - Product (Loop).html
@@ -11,7 +11,9 @@
         <div class="ems-prd-name">$prmUrunAd$</div>
         <div class="ems-prd-description">$prmUrunKisaAciklama$</div>
         <EMOSIF condition="TPR_PARAMETRE='prmUrunFiyatFormatli' AND (TPD_DEGER<>'')"><div class="ems-prd-price clearfix">
+            <EMOSIF condition="TPR_PARAMETRE='prmUrunIndirimOran' AND (TPD_DEGER<>'')">
             <EMOSIF condition="TPR_PARAMETRE='prmUrunIlkFiyatFormatli' AND (TPD_DEGER<>'')"><div class="ems-prd-price-first">$prmUrunIlkFiyatFormatli$</div></EMOSIF>
+            </EMOSIF>
             <div class="ems-prd-price-selling">$prmUrunFiyatFormatli$</div>
         </div></EMOSIF>
         <div class="ems-prd-btn-detail"><a href="$prmUrunLink$"><span>DETAYLI BİLGİ</span></a></div>
@@ -26,7 +28,9 @@
         <div class="ems-prd-name">$prmUrunAd$</div>
         <div class="ems-prd-description">$prmUrunKisaAciklama$</div>
         <EMOSIF condition="TPR_PARAMETRE='prmUrunFiyatFormatli' AND (TPD_DEGER<>'')"><div class="ems-prd-price clearfix">
+            <EMOSIF condition="TPR_PARAMETRE='prmUrunIndirimOran' AND (TPD_DEGER<>'')">
             <EMOSIF condition="TPR_PARAMETRE='prmUrunIlkFiyatFormatli' AND (TPD_DEGER<>'')"><div class="ems-prd-price-first">$prmUrunIlkFiyatFormatli$</div></EMOSIF>
+            </EMOSIF>
             <div class="ems-prd-price-selling">$prmUrunFiyatFormatli$</div>
         </div></EMOSIF>
         <div class="ems-prd-btn-detail"><a href="$prmUrunLink$"><span>DETAYLI BİLGİ</span></a></div>
