EMS0004290531216_3 - kampanyalar sayfası üzerinden sepete eklemek

--- a/test/src/emos-build/design - Campaigns.html
+++ b/test/src/emos-build/design - Campaigns.html
@@ -119,12 +119,8 @@
                             </div>
                         </div>
                         <div class="btn-group">
-                            <EMOSIF source="S_EXP_ICERIKPARAMETREROW#L2" condition="prm9<>''">
-                            <a onclick="javascript:openPopup('/popup/popup_promosyon.aspx?pro=$$L2.prm9$$' + '&amp;anaNesne=' + '' + '&amp;lang=tr-TR' + '', 'popup_stok', 'popup_prom');" href="javascript:void(0);" class="btn btnPromo">SATIN AL</a>
-                            </EMOSIF>
-                            <EMOSIF source="S_EXP_ICERIKPARAMETREROW#L2" condition="prm6<>''">
-                                <a href="$$L2.prm6$$" class="btn">DETAYLI BİLGİ</a>
-                            </EMOSIF>
+                            <EMOSIF source="S_EXP_ICERIKPARAMETREROW#L2" condition="prm9<>''"><a onclick="javascript:openPopup('/popup/popup_promosyon.aspx?pro=$$L2.prm9$$' + '&amp;anaNesne=' + '' + '&amp;lang=tr-TR' + '', 'popup_stok', 'popup_prom');" href="javascript:void(0);" class="btn btnPromo">SATIN AL</a></EMOSIF>
+                            <EMOSIF source="S_EXP_ICERIKPARAMETREROW#L2" condition="prm6<>''"><a href="$$L2.prm6$$" class="btn">DETAYLI BİLGİ</a></EMOSIF>
                             <a href="/arcelik-bayileri/" class="btn btn-text">— Mağaza Bul</a>
                         </div>
                     </div>
