EMS0004295532468_4 - iletişim sayfası şehir ilçe eklenmesi

--- a/test/src/emos-build/ascSoruSor.html
+++ b/test/src/emos-build/ascSoruSor.html
@@ -34,9 +34,13 @@
                     <emos type="div" class="ems-form-label" id="plhMesajUlkeLabel" />
                     <emos type="div" class="ems-form-obj" id="plhMesajUlke" />
                 </div>
-                <div class="ems-field text ems-none">
+                <div class="ems-field text">
                     <emos type="div" class="ems-form-label" id="plhMesajSehirLabel" />
                     <emos type="div" class="ems-form-obj" id="plhMesajSehir" />
+                </div>
+                <div class="ems-field text">
+                    <emos type="div" class="ems-form-label" id="plhMesajIlceLabel" />
+                    <emos type="div" class="ems-form-obj" id="plhMesajIlce" />
                 </div>
                 <div class="ems-field text ems-none">
                     <emos type="div" class="ems-form-label" id="plhMesajAdresLabel" />
