--- a/test/src/emos-build/ascLogin.html
+++ b/test/src/emos-build/ascLogin.html
@@ -132,7 +132,8 @@
 													<div class="ems-field text ems-none">
 														<div class="ems-form-label"></div>
 														<emos type="div" class="ems-form-obj" id="plhUyelikSmsChk" />
-													</div>
+                                                    </div>
+                                                    <div class="ems-field paro-append"></div>
 													<div class="ems-field text">
 														<div class="ems-form-label"></div>
 														<emos type="div" class="ems-form-obj" id="plhUyelikCaptcha" />
