mail | Cep Telefonu Alanı

--- a/test/src/emos-build/ascTeslimat.html
+++ b/test/src/emos-build/ascTeslimat.html
@@ -152,7 +152,7 @@
                                         </div>
                                         <div class="ems-field text b-uye-telefon-fatura">
                                             <emos type="div" class="ems-form-label" id="plhFATelefonLabel" />
-                                            <emos type="div" class="ems-form-obj" id="plhFATelefon" />
+                                            <emos type="div" class="ems-form-obj" id="plhFAPhone" />
                                         </div>
                                     </div>
 									<emos type="div" class="ems-field button margin0" id='plhBtnAdresKaydet' />
