EMS0004302537565_1 font değişimi + EMS0004300936245_2 yetkili servis ve bayi ayrımı

--- a/test/src/emos-build/banners.html
+++ b/test/src/emos-build/banners.html
@@ -744,51 +744,124 @@ slider pin
     <div class="service-sidebar">
         <div class="service-nav">
             <ul class="service-view">
-                <li rel="list"><a href="javascript:void(0);">LİSTE</a></li>
-                <li rel="map"><a href="javascript:void(0);">HARİTA</a></li>
+                <li rel="list">
+                    <a href="javascript:void(0);">LİSTE</a>
+                </li>
+                <li rel="map">
+                    <a href="javascript:void(0);">HARİTA</a>
+                </li>
             </ul>
             <ul class="service-type">
-                <li data-cls="yetkili-servis" rel="1932"><a href="javascript:void(0);">YETKİLİ SERVİSLER</a></li>
-                <li data-cls="arcelik-magazalar" rel="1931"><a href="javascript:void(0);">AR&Ccedil;ELİK MAĞAZALARI</a></li>
+                <li data-cls="yetkili-servis" rel="3">
+                    <a href="javascript:void(0);">YETKİLİ SERVİSLER</a>
+                </li>
+                <li data-cls="arcelik-magazalar" rel="1">
+                    <a href="javascript:void(0);">AR&Ccedil;ELİK MAĞAZALARI</a>
+                </li>
             </ul>
             <ul class="service-location">
-                <li class="new-search"><a href="javascript:void(0);" class="new-search-btn"><span>Yeni Arama Yap</span></a></li>
+                <li class="new-search">
+                    <a href="javascript:void(0);" class="new-search-btn">
+                        <span>Yeni Arama Yap</span>
+                    </a>
+                </li>
                 <li class="location-search-input">
                     <div class="obj-title">ARA</div>
-                    <input type="text" placeholder="İL / İL&Ccedil;E" name="query" class="locator-query-input" autocomplete="off" />                    </li>
+                    <input type="text" placeholder="İL / İL&Ccedil;E" name="query" class="locator-query-input" autocomplete="off" /> </li>
                 <li class="city-list" data-target="county" data-type="servisIlce">
                     <div class="obj-title">İL</div>
-                    <div class="dropdown"><span>T&uuml;m&uuml;</span>
+                    <div class="dropdown">
+                        <span>T&uuml;m İller</span>
                         <ul>
                         </ul>
                     </div>
                 </li>
                 <li class="county-list">
                     <div class="obj-title">İL&Ccedil;E</div>
-                    <div class="dropdown"><span>T&uuml;m&uuml;</span>
+                    <div class="dropdown">
+                        <span>T&uuml;m İl&ccedil;eler</span>
                         <ul>
                         </ul>
                     </div>
                 </li>
                 <li class="distance-list">
-                    <div class="dropdown"><span>SE&Ccedil;İNİZ</span>
+                    <div class="dropdown">
+                        <span>SE&Ccedil;İNİZ</span>
                         <ul>
-                            <li data-val="-1"><a href="javascript:void(0)"><span>SE&Ccedil;İNİZ</span></a></li>
-                            <li data-val="2" class="selected"><a href="javascript:void(0)"><span>2 KM</span></a></li>
-                            <li data-val="5"><a href="javascript:void(0)"><span>5 KM</span></a></li>
-                            <li data-val="10"><a href="javascript:void(0)"><span>10 KM</span></a></li>
-                            <li data-val="15"><a href="javascript:void(0)"><span>15 KM</span></a></li>
-                            <li data-val="20"><a href="javascript:void(0)"><span>20 KM</span></a></li>
+                            <li data-val="-1">
+                                <a href="javascript:void(0)">
+                                    <span>SE&Ccedil;İNİZ</span>
+                                </a>
+                            </li>
+                            <li data-val="2" class="selected">
+                                <a href="javascript:void(0)">
+                                    <span>2 KM</span>
+                                </a>
+                            </li>
+                            <li data-val="5">
+                                <a href="javascript:void(0)">
+                                    <span>5 KM</span>
+                                </a>
+                            </li>
+                            <li data-val="10">
+                                <a href="javascript:void(0)">
+                                    <span>10 KM</span>
+                                </a>
+                            </li>
+                            <li data-val="15">
+                                <a href="javascript:void(0)">
+                                    <span>15 KM</span>
+                                </a>
+                            </li>
+                            <li data-val="20">
+                                <a href="javascript:void(0)">
+                                    <span>20 KM</span>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </li>
-                <li class="location-search-btn"><a href="javascript:void(0);" class="btn btn-gray search-btn">LİSTELE</a></li>
-                <li class="location-change-search"><a href="javascript:void(0);" class="change-search-btn"><span class="type-2">YAZARAK ARAMA</span><span class="type-1">İL İL&Ccedil;E İLE ARAMA</span></a></li>
+                <li class="location-search-btn">
+                    <a href="javascript:void(0);" class="btn btn-gray search-btn">LİSTELE</a>
+                </li>
+                <li class="location-change-search">
+                    <a href="javascript:void(0);" class="change-search-btn">
+                        <span class="type-2">YAZARAK ARAMA</span>
+                        <span class="type-1">İL İL&Ccedil;E İLE ARAMA</span>
+                    </a>
+                </li>
+                <li class="location-share">
+                    <a href="javascript:void(0);" class="location-share-btn">
+                        <span>
+                            <i class="icon-location"> </i> YAKINIMDAKİLER</span>
+                    </a>
+                </li>
             </ul>
-            <div class="call-center"><a href="tel:444 0 888"><span><b>7/24</b> &Ccedil;ağrı Merkezi</span> <i>444 0 888</i></a>
-                <p>Y&uuml;zlerce &uuml;r&uuml;n ve yenilik&ccedil;i hizmet anlayışımızla buluşmak i&ccedil;in <b>sizleri de Ar&ccedil;elik mağazalarına bekliyoruz.</b></p>
+            <div class="call-center">
+                <a href="tel:444 0 888">
+                    <span>
+                        <b>7/24</b> &Ccedil;ağrı Merkezi</span>
+                    <i>444 0 888</i>
+                </a>
+                <div class="obj-service">
+                    <p>Y&uuml;zlerce &uuml;r&uuml;n ve yenilik&ccedil;i hizmet anlayışımızla buluşmak i&ccedil;in
+                        <b>sizleri de Ar&ccedil;elik mağazalarına bekliyoruz.</b>
+                    </p>
+                    <p>
+                        <b>Ar&ccedil;elik Servis</b> adres ve telefon bilgilerine listemizden ulaşabilir, size en yakın Yetkili
+                        Servis i&ccedil;in haritadan se&ccedil;iminizi yapabilirsiniz. Ayrıca Ar&ccedil;elik Yetkili Servis
+                        Hattı 444 0 888 ile uzman servis ağımızdan her zaman destek alabilirsiniz. Ar&ccedil;elik Yetkili
+                        Servisleri geniş servis ağı sayesinde T&uuml;rkiye&rsquo;nin her yerinde hizmet vermektedir.</p>
+                    <p>İl ve il&ccedil;e bilgilerinizi girerek veya "YAKINIMDAKİLER" tıklayarak konumunuzu paylaşıp
+                        <b>en yakın yetkili servis</b> iletişim bilgilerine ulaşabilirsiniz.</p>
+                </div>
+                <div class="obj-dealer">
+                    <p>İl ve il&ccedil;e bilgilerinizi girerek veya "YAKINIMDAKİLER" tıklayarak konumunuzu paylaşıp
+                        <b>en yakın mağaza</b> iletişim bilgilerine ulaşabilirsiniz.</p>
+                </div>
             </div>
         </div>
+        getExportData[ysExp;]
         <div class="service-list"></div>
     </div>
     <div style="width: 100%; height: 100%;" id="map" class="service-map"></div>
