enerji sinifi & paro kdv toplam

--- a/test/src/emos-build/ascSiparisSepet.html
+++ b/test/src/emos-build/ascSiparisSepet.html
@@ -39,6 +39,7 @@
 							</div>
 							<div class="ems-grid-name">
 								<emos id="plhUrunAdi" />
+							    <emos id="plhPromToplamTutar" />
 							</div>
 							<div class="ems-grid-piece ems-center">
                                 <div class="piece-count">
@@ -85,6 +86,7 @@
 				<emos id='plhKuponLabel' />
 				<emos id='plhKuponText' />
 				<emos id='plhBtnKuponKullan' />
+			    <emos id='plhBtnKuponIptal' />
 				<emos id='plhHCK_HATA' />
 			</div>
 		</div>
