--- a/test/src/emos-build/ascUrunList.html
+++ b/test/src/emos-build/ascUrunList.html
@@ -18,7 +18,7 @@
                         <emos type="div" class="ems-prd-rating" id="plhUrun_urunYorum" />
                         <div class="prd-fields-1">
                             <emos type="div" class="ems-prd-name" id="plhUrun_urunAdi" />
-                            <emos type="div" class="ems-prd-description" id="plhUrun_urunAciklama" />
+                            <emos type="div" class="ems-prd-description" id="plhUrun_urunAciklamaLinksiz" />
                         </div>
                         <emos type="div" class="urunListe_ParoAciklama" id="plhUrun_ParoAciklama" />
                         <div class="ems-prd-price">
