--- a/test/src/emos-build/template - Sliders.html
+++ b/test/src/emos-build/template - Sliders.html
@@ -60,7 +60,7 @@ div.xx-slider swiper-container swiper-container-horizontal swiper-alpha theme-li
 <EMOSIF condition="TPR_PARAMETRE='prmScript' AND (TPD_DEGER<>'')"><div class="slider-script">$prmScript$</div></EMOSIF>
 
 ---detay Slider (Loop)
-<li data-banner-id="id-$prmTpdSira$"<EMOSIF condition="TPR_PARAMETRE='prmCat' AND (TPD_DEGER<>'')"> data-banner-category="$prmCat$"</EMOSIF> class="<EMOSIF condition="TPR_PARAMETRE='prmClass' AND (TPD_DEGER<>'')"> $prmClass$</EMOSIF> $prmType_Value$ swiper-slide<EMOSIF condition="TPR_PARAMETRE='prmGroupClass' AND (TPD_DEGER<>'')"><EMOSLOOP source="prmGroupClass"> $prmGroupClass_Value$</EMOSLOOP></EMOSIF>" style="<EMOSIF condition="TPR_PARAMETRE='prmGroupClass' AND (TPD_DEGER LIKE '%cfg-li-has-bg-img%')"> background-image: url($prmImg$);</EMOSIF>" <EMOSIF condition="TPR_PARAMETRE='prmDropdownTitle' AND (TPD_DEGER<>'')"> data-title="$prmDropdownTitle$"</EMOSIF>>
+<li data-banner-id="id-$prmTpdSira$"<EMOSIF condition="TPR_PARAMETRE='prmCat' AND (TPD_DEGER<>'')"> data-banner-category="$prmCatName_$prmCat$$"</EMOSIF> class="<EMOSIF condition="TPR_PARAMETRE='prmClass' AND (TPD_DEGER<>'')"> $prmClass$</EMOSIF> $prmType_Value$ swiper-slide<EMOSIF condition="TPR_PARAMETRE='prmGroupClass' AND (TPD_DEGER<>'')"><EMOSLOOP source="prmGroupClass"> $prmGroupClass_Value$</EMOSLOOP></EMOSIF>" style="<EMOSIF condition="TPR_PARAMETRE='prmGroupClass' AND (TPD_DEGER LIKE '%cfg-li-has-bg-img%')"> background-image: url($prmImg$);</EMOSIF>" <EMOSIF condition="TPR_PARAMETRE='prmDropdownTitle' AND (TPD_DEGER<>'')"> data-title="$prmDropdownTitle$"</EMOSIF>>
     <EMOSIF condition="TPR_PARAMETRE='prmType' AND (TPD_DEGER LIKE 'type-freeHtml%')">   
         $prmFreeHtml$
     </EMOSIF>
@@ -69,7 +69,7 @@ div.xx-slider swiper-container swiper-container-horizontal swiper-alpha theme-li
         <EMOSIF condition="TPR_PARAMETRE='prmImg' AND (TPD_DEGER<>'')"><div class="swiper-img">
             <img src="/images/frontend/placeholder/1100x620.gif" data-original="$prmImg$" class="lazy-load" alt="title" />
         </div></EMOSIF>
-        <EMOSIF condition="TPR_PARAMETRE='prmHeadline' AND (TPD_DEGER<>'')"><EMOSIF condition="TPR_PARAMETRE='prmHeadlineBtnText' AND (TPD_DEGER<>'')"><a href="$prmHeadlineBtnLink$" class="btn-full-link swiper-full-link"></a></EMOSIF><div class="headline">
+        <EMOSIF condition="TPR_PARAMETRE='prmHeadline' AND (TPD_DEGER<>'')"><EMOSIF condition="TPR_PARAMETRE='prmHeadlineBtnText' AND (TPD_DEGER<>'')"><a href="$prmHeadlineBtnLink$" class="btn-full-link swiper-full-link"></a></EMOSIF><div class="headline<EMOSIF condition="TPR_PARAMETRE='prmHeadlineBg' AND (TPD_DEGER<>'')"> $prmHeadlineBg_Value$</EMOSIF>">
             <p>$prmHeadline$</p>
             <EMOSIF condition="TPR_PARAMETRE='prmHeadlineBtnText' AND (TPD_DEGER<>'')"><a href="$prmHeadlineBtnLink$" class="btn">$prmHeadlineBtnText$</a></EMOSIF>
         </div></EMOSIF>
@@ -83,7 +83,7 @@ div.xx-slider swiper-container swiper-container-horizontal swiper-alpha theme-li
             <EMOSIF condition="TPR_PARAMETRE='prmDesc' AND (TPD_DEGER<>'')"><p class="desc">$prmDesc$</p></EMOSIF>
             <EMOSIF condition="TPR_PARAMETRE='prmBtnText' AND (TPD_DEGER<>'')"><a href="$prmBtnLink$" class="btn">$prmBtnText$</a></EMOSIF>
         </div>
-        <EMOSIF condition="TPR_PARAMETRE='prmHeadline' AND (TPD_DEGER<>'')"><a href="$prmHeadlineBtnLink$" class="btn-full-link swiper-full-link"></a><div class="headline">
+        <EMOSIF condition="TPR_PARAMETRE='prmHeadline' AND (TPD_DEGER<>'')"><a href="$prmHeadlineBtnLink$" class="btn-full-link swiper-full-link"></a><div class="headline<EMOSIF condition="TPR_PARAMETRE='prmHeadlineBg' AND (TPD_DEGER<>'')"> $prmHeadlineBg_Value$</EMOSIF>">
             <p>$prmHeadline$</p>
             <a href="$prmHeadlineBtnLink$" class="btn">$prmHeadlineBtnText$</a>
         </div></EMOSIF>
