Satin alma Rehberi
t

--- a/test/src/emos-build/ascSiparisSepet.html
+++ b/test/src/emos-build/ascSiparisSepet.html
@@ -86,7 +86,10 @@
 				<emos id='plhKuponLabel' />
 				<emos id='plhKuponText' />
 				<emos id='plhBtnKuponKullan' />
-			    <emos id='plhBtnKuponIptal' />
+				<div class="ems-inline-table hck-durum mt10">
+    			    <emos type="div" class="hck-ad" id='plhHCK_AD' />
+    			    <emos type="div" class="hck-iptal ems-right" id='plhBtnKuponIptal' />
+		        </div>
 				<emos id='plhHCK_HATA' />
 			</div>
 		</div>
