--- a/test/src/emos-build/ascTeslimat.html
+++ b/test/src/emos-build/ascTeslimat.html
@@ -4,6 +4,7 @@
 		<emos id="plhMahalleZorunluLabel" />
 		<emos id="plhYurtdisiSatLimLabel" />
 		<emos id="plhYDisiUrunUyari" />
+	    <emos id="plhTCKNTutarLabel" />
 		<emos type="div" class="page-top-title" id="plhTeslimatHeader" />
 		<emos id="plhTeslimatBilgi">
 			<emos type="div" class="test1" id="plhTeslimatBilgi" />
